Sun Dec 16 23:10:13 GMT 2012  Olly Betts <olly@survex.com>

	* bin/Makefile.mk: INCLUDES is always used, AM_CPPFLAGS isn't if there
	  are per-executable CPPFLAGS, so add AM_CPPFLAGS explicitly when we
	  use per-executable CPPFLAGS.

Fri Dec 14 21:25:58 GMT 2012  Olly Betts <olly@survex.com>

	* Makefile.am,languages/Makefile.mk,queryparser/Makefile.mk,
	  tests/Makefile.am: In automake, INCLUDES is now deprecated in favour
	  of AM_CPPFLAGS so update to use the latter.

Tue Nov 27 05:39:30 GMT 2012  Olly Betts <olly@survex.com>

	* examples/quest.cc: Need <algorithm> for lower_bound().

Mon Nov 26 23:46:43 GMT 2012  Olly Betts <olly@survex.com>

	* examples/quest.cc: Align option descriptions in --help output, and
	  make the initial letter of such descriptions consistently lowercase.

Mon Nov 26 19:52:50 GMT 2012  Olly Betts <olly@survex.com>

	* examples/quest.cc: Add --flags command line option to allow setting
	  arbitrary QueryParser flags.

Mon Nov 26 03:02:03 GMT 2012  Olly Betts <olly@survex.com>

	* api/valuerangeproc.cc: Move 3 declarations to where we first use the
	  variables.

Mon Nov 26 02:59:41 GMT 2012  Olly Betts <olly@survex.com>

	* matcher/multimatch.cc: We no longer use the highest weighted
	  MSet entry to calculate percentages, so stop searching for it.
	  (Spotted by cppcheck)

Mon Nov 26 02:59:02 GMT 2012  Olly Betts <olly@survex.com>

	* backends/brass/brass_compact.cc,backends/chert/chert_compact.cc:
	  Remove unused variables (spotted by cppcheck).

Mon Nov 26 02:12:19 GMT 2012  Olly Betts <olly@survex.com>

	* api/maptermlist.h,api/matchspy.cc,api/omdatabase.cc,
	  backends/inmemory/inmemory_database.cc,
	  backends/inmemory/inmemory_positionlist.cc,
	  backends/multi/multi_postlist.cc,backends/remote/net_termlist.cc,
	  bin/xapian-delve.cc,matcher/exactphrasepostlist.cc,
	  matcher/mergepostlist.cc,matcher/phrasepostlist.cc,
	  tests/harness/backendmanager.cc: Prefer ++i to i++.
